--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,5 +17,6 @@
 
         </activity>
         <activity android:name=".ItemDetailsActivity"></activity>
+        <activity android:name=".ItemEditActivity"></activity>
     </application>
 </manifest>
